--- a/config/RGB-D/d455.yaml
+++ b/config/RGB-D/d455.yaml
@@ -8,19 +8,22 @@ File.version: "1.0"
 Camera.type: "PinHole"
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera1.fx: 517.306408
-Camera1.fy: 516.469215
-Camera1.cx: 318.643040
-Camera1.cy: 255.313989
 
-Camera1.k1: 0.262383
-Camera1.k2: -0.953104
-Camera1.p1: -0.005358
-Camera1.p2: 0.002628
-Camera1.k3: 1.163314
+Camera1.fx: 213.82789611816406
+Camera1.fy: 214.12545776367188
+Camera1.cx: 213.60614013671875
+Camera1.cy: 120.16542053222656
 
-Camera.width: 640
-Camera.height: 480
+
+
+Camera1.k1: -0.05638613551855087
+Camera1.k2: 0.06309621036052704
+Camera1.p1: -0.0009748814627528191
+Camera1.p2: 0.0009760227403603494
+Camera1.k3: -0.020070191472768784
+
+Camera.width: 424
+Camera.height: 0
 
 # Camera frames per second 
 Camera.fps: 30
@@ -33,7 +36,7 @@ Stereo.ThDepth: 40.0
 Stereo.b: 0.07732
 
 # Depth map values factor
-RGBD.DepthMapFactor: 5000.0 # 1.0 for ROS_bag
+RGBD.DepthMapFactor: 25.0 # 1.0 for ROS_bag
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
